commentaires variabilité de la segmentation selon l'opérateur

--- a/manuscrit_G_LEFEBVRE/biblio.bib
+++ b/manuscrit_G_LEFEBVRE/biblio.bib
@@ -1,5 +1,11 @@
 -- Les commentaires ne sont pas entre %% --
 
+@article{Cornelis2016,
+title = "Impact on {RECIST} of manual {2D} segmentation of lung and liver metastases",
+author = "Cornelis, F. and Martin, M. and Linck, P-A and Saut, O. and Palussiere, J. and Colin, T.",
+note = "(soumis)"
+}
+
 @article{Holmes2007,
 title = "Vascular endothelial growth factor receptor-2: Structure, function, intracellular signalling and therapeutic inhibition ",
 journal = "Cellular Signalling ",
