--- a/manuscrit_G_LEFEBVRE/chap_modeleEDP.tex
+++ b/manuscrit_G_LEFEBVRE/chap_modeleEDP.tex
@@ -12,7 +12,7 @@ Après avoir présenté la problématique, les principaux résultats obtenus ser
 La construction du modèle sera ensuite détaillée. Nous discuterons enfin plus précisément, sur les résultats numériques apportés par notre modèle et les diverses informations que l'on peut en tirer.
 
 \section{Problématique}
-Le but de ce chapitre est de construire un modèle de croissance tumorale adapté aux métastases hépatiques de GIST et à leurs traitements. Un comportement typique est celui de \Nber dont les données d'imagerie sont présentées en Annexe~\ref{chap:anx_img_complement}, sur les Figures~\ref{fig:nber_complete_scan} et~\ref{fig:contourageNber}. Le schéma typique est le suivant~: à la détection d'une métastase (pour \Nber, à l'examen n°1, jour~119) le patient reçoit de l'imitanib (thérapie ciblée). La réponse est positive~: la tumeur décroît et est contrôlée jusqu'au jour~867 (examen n°11) où l'on constate une résistance au traitement. Celui-ci est alors modifié~: l'imatinib est  remplacé par le sunitinib, thérapie ciblée ayant notamment des effets antiangiogéniques. Ce traitement permet une nouvelle fois le contrôle de la lésion jusqu'à une nouvelle rechute constatée jour~1179 (examen n°11). Ce comportement est typique des métastases hépatiques de GIST et c'est cei que nous souhaitons modéliser ici.
+Le but de ce chapitre est de construire un modèle de croissance tumorale adapté aux métastases hépatiques de GIST et à leurs traitements. Un comportement typique est celui de \Nber dont les données d'imagerie sont présentées en Annexe~\ref{chap:anx_img_complement}, sur les Figures~\ref{fig:nber_complete_scan} et~\ref{fig:contourageNber}. Le schéma typique est le suivant~: à la détection d'une métastase (pour \Nber, à l'examen n°1, jour~119) le patient reçoit de l'imatinib (thérapie ciblée). La réponse est positive~: la tumeur décroît et est contrôlée jusqu'au jour~867 (examen n°11) où l'on constate une résistance au traitement. Celui-ci est alors modifié~: l'imatinib est  remplacé par le sunitinib, thérapie ciblée ayant notamment des effets antiangiogéniques. Ce traitement permet une nouvelle fois le contrôle de la lésion jusqu'à une nouvelle rechute constatée jour~1179 (examen n°11). Ce comportement est typique des métastases hépatiques de GIST et c'est cei que nous souhaitons modéliser ici.
 
 \section{Principaux résultats}
 Sur la Figure~\ref{fig_nber} est présentée l'évolution d'une métastase hépatique de GIST de \Nber~à travers une séquence de scanners (sur la partie gauche de la figure) et l'aire tumorale (sur la partie droite de la figure). 
