--- a/manuscrit_G_LEFEBVRE/intro.tex
+++ b/manuscrit_G_LEFEBVRE/intro.tex
@@ -20,15 +20,16 @@ De nombreuses études fondamentales, pré-cliniques ou cliniques ont été réal
  
 \paragraph{}
 Les travaux présentés ici s'inscrivent dans cette démarche~\cite{cornelis2013vivo,jouganous2014}. Ils constituent un premier pas dans la modélisation de la résistance aux traitements, basée sur des images cliniques. 
-Plus particulièrement, il s'agit là de proposer un modèle mathématique décrivant la croissance de métastases 
+Plus particulièrement, il est question ici %s'agit là 
+de proposer un modèle mathématique décrivant la croissance de métastases 
 %(tumeurs filles) 
 (localisations secondaires disséminées à partir d'une lésion primitive)
 hépatiques en provenance d'une  
 tumeur stromale\footnote{Le stroma est un tissu de soutien, non impliqué dans la fonction première de l'organe.} de l'intestin grêle
 %cancer du stroma\footnote{Tissu de soutien, non impliqué dans la fonction première de l'organe.} gastro-instestinal  
 (GIST).
-Ce type de cancer touche de 9 à 14 personnes sur un million par an~\cite{Nilsson2005}. 
-il s'agit donc d'un cancer assez rare mais il présente des spécificités qui en font un modèle intéressant pour l'étude de résistances aux traitements. 
+Ce type de cancer a une incidence de 9 à 14 cas par million de personnes par an~\cite{Nilsson2005}. 
+Il s'agit donc d'un cancer assez rare mais il présente des spécificités qui en font un modèle intéressant pour l'étude de résistances aux traitements. 
 Dans 25\% des cas, ce cancer migre vers le foie~\cite{dematteo2000}. 
 %%Ces métastases sont connues pour être relativement résistantes aux traitements anti-cancéreux, ce qui donne un intérêt certain à la modélisation de leurs comportements. 
 %Ces métastases peuvent être résistantes aux traitements conventionnels comme la chimiothérapie ou la radiothérapie. Ainsi d'autres thérapeutiques ont été proposées comme les inhibiteurs de la tyrosine kinase ou les traitements anti-angiogéniques.  Malheureusement, en fonction des mutations rencontrées ou acquises, des résistances à ces traitements peuvent également être rencontrées sur ce type de métastases, ce qui donne un intérêt certain à la modélisation de leurs comportements. 
