--- a/manuscrit_G_LEFEBVRE/remerciements.tex
+++ b/manuscrit_G_LEFEBVRE/remerciements.tex
@@ -17,7 +17,7 @@ Je remercie François Cornelis, radiologue du CHU de Bordeaux, pour sa collabora
 Je tiens à remercier Stéphanie Salmon (professeur de l'Université de Reims) et Simona Mancini (maître de conférence de l'Université d'Orléans) d'avoir accepté de rapporter mon manuscrit de thèse. Leur regard neuf sur mes travaux m'ont permis de mieux expliquer certaines notions importantes et certains choix effectués dans mes travaux.
 
 \paragraph{}
-Je salue également la présence des examinateurs de ce travail~: Nicolas Meunier (maître de conférence de l'Université Paris Descartes) ainsi que François Cornelis et Olivier Saut également. 
+Je salue également la présence des examinateurs de ce travail~: Nicolas Meunier (maître de conférence de l'Université Paris Descartes) ainsi que François Cornelis et Olivier Saut. 
 
 
 \paragraph{}
