Ajout de footnote (epithelium, gene KIT, ... )

--- a/manuscrit_G_LEFEBVRE/glossaire.tex
+++ b/manuscrit_G_LEFEBVRE/glossaire.tex
@@ -11,6 +11,7 @@
 \item[Cytotoxique] Qui détruit les cellules.
 \item[Développement thérapeutique] Série de traitements utilisés. La nécessité de changer de traitement intervient lors des rechutes successives. 
 \item[Endothélial] Relatif aux cellules qui recouvrent la paroi intérieure des vaisseaux sanguins. Leur multiplication et leur maturation permettent l'angiogenèse.
+\item[Epithélium] Tissus constitués de cellules étroitement juxtaposées (ou jointives), sans interposition de fibre ou de substance fondamentale. Ces tissus servent notamment de paroi entre deux milieux. 
 \item[Extravasion] Processus par lequel les cellules invasives de tumeur primaire peuvent traverser les membranes pour créer des métastases. 
 \item[Facteur de croissance] Protéine externe à la cellule commandant sa croissance ou sa duplication.
 \item[Hypoxie] Manque d'oxygène.
