Basculement corrections  bleu --> noir

--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -275,7 +275,8 @@
 %\newcommand{\grisfonce}{gray!70}
 \newcommand{\grisclair}{gray!30}
 \newcommand{\grisfonce}{gray!50}
-\newcommand{\correction}[1]{{\color{blue}#1}}
+%\newcommand{\correction}[1]{{\color{blue}#1}} %%% pour voir les corrections en bleu
+\newcommand{\correction}[1]{#1} %%%% pour le final
 
 \setlength\doublerulesep{2mm} %% hauteur entre 2 \hline successifs
 \newlength{\retraittableau}
