Correction statut des membres du jury + fignolage

--- a/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
+++ b/manuscrit_G_LEFEBVRE/annexe_tableaux_graphiques_complementaires.tex
@@ -9,7 +9,7 @@
 
 \section{Ensemble des données}
 L'ensemble des données utilisé pour réaliser ces travaux est présenté dans cette section. L'ensemble des scanners des 2 patients, \Nber et \Chen, est présenté ici. On présentera ensuite l'ensemble des histogrammes des niveaux de gris, correspondant à la zone tumorale contourée manuellement \correction{-- par mes soins --} sur les scanners. \correction{Une étude (présentée dans~\cite{Cornelis2016}), menée par F. Cornelis, a été réalisée pour examiner l'impact de l'observateur sur la segmentation. Il a été demandé à 2 groupes d'observateurs de contourer 6 lésions hépatiques et 7 lésions pulmonaires. Le groupe A est constitué de 10 médecins entrainés à la segmentation tandis que le groupe B (dont j'ai eu le plaisir de faire parti) est formé de 10 scientifiques avec une connaissance basique de la segmentation. 
-L'étude statistique réalisée sur la variabilité inter-opérateur et inter-groupe de la segmentation à montrer qu'il n'apparaît aucune différence significative selon l'opérateur ou le groupe. Ceci rend légitime mon propre contourage.}
+L'étude statistique réalisée sur la variabilité inter-opérateur et inter-groupe de la segmentation à montrer qu'il n'apparaît aucune différence significative selon l'opérateur ou le groupe. De plus, F. Cornelis, radiologue au CHU de Bordeaux, avec qui nous collaborons, a validé le contourage effectué. Ceci rend légitime mon propre contourage.}
 
 \newpage
 %%\section{Ensemble des données}
