--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -4,7 +4,9 @@
 %%\documentclass[a4paper,oneside]{book}
 
 \usepackage[utf8]{inputenc}
-\usepackage[francais,frenchb]{babel}
+\usepackage[english,francais,frenchb]{babel}
+\selectlanguage{francais}
+
 \usepackage[T1]{fontenc}
 \usepackage{amsmath,amsfonts,amssymb}
 \usepackage{amsthm} %% \newtheorem
@@ -387,7 +389,8 @@
 \newcommand{\shortitlefr}{Modélisation et analyse de l'\hetero tumorale lors de résistance aux traitements}
 \newcommand{\subtitlefr}{cas des métastases hépatiques de GIST}
 \newcommand{\titrefr}{\shortitlefr~: \subtitlefr}
-\newcommand{\titreen}{Tumor heterogeneity modeling and analysis, during  treatments resistance: case of GIST liver metastases}
+%\newcommand{\titreen}{Tumor heterogeneity modeling and analysis, during  treatments resistance: case of GIST liver metastases}
+\newcommand{\titreen}{Modeling and analysis of tumor heterogeneity during  treatments resistance: case of GIST liver metastases}
 
 %%%=====================================================%%%%
 %%%      ***     --- DEBUT DU DOCUMENT ----    ***       %%%%
@@ -433,12 +436,12 @@ sous la direction de : \textbf{Thierry COLIN}
 \end{flushleft}
 \vspace{-5mm}
 \begin{center}\begin{tabular}{p{6cm} p{50mm} l}
- Mme. Simona MANCINI & Maître de conférence & Rapporteur \\
+ Mme. Simona MANCINI & Maître de conférences & Rapporteur \\
  Mme. Stéphanie SALMON & Professeur & Rapporteur \\
  M. Thierry COLIN & Professeur & Directeur \\
- M. Fran\c cois CORNELIS & Docteur & Examinateur \\
- M. Nicolas MEUNIER & Maître de conférence & Examinateur \\
- M. Olivier SAUT & Maître de conférence & Examinateur\\
+ M. Fran\c cois CORNELIS & Praticien hospitalier & Examinateur \\
+ M. Nicolas MEUNIER & Maître de conférences & Examinateur \\
+ M. Olivier SAUT & Directeur de recherche & Président\\
 \end{tabular}\end{center}
 \end{titlepage}
 
