--- a/manuscrit_G_LEFEBVRE/remerciements.tex
+++ b/manuscrit_G_LEFEBVRE/remerciements.tex
@@ -30,7 +30,7 @@ Je remercie également Patricio Cumsille, chercheur de l'université du Biobío 
 Je remercie aussi, l'ensemble des personnes avec qui j'ai pu tour à tour partager un bureau. Michaël Leguèbe, Julie Joie, Manon Deville, Thibaut Kritter et Guillaume Dechristé notamment, pour l'intérêt porté à mes questions ouvertes et les réponses qu'ils m'ont apportées. 
 
 \paragraph{}
-Je remercie également l'ensemble des doctorants de l'équipe MC2\footnote{Modelling, Control and Computations}, récemment divisée en deux nouvelles équipes (MEMPHIS\footnote{Modeling Enablers for Multi-PHysics and InteractionS} et MONC\footnote{Modélisation Mathématique pour l'Oncologie}), qui au fil du temps sont devenus bien plus que de simples collègues, en particulier Hervé Ung, Alexia de Brauer, Thomas Michel, Etienne Baratchart et Alice Raeli. Les divers débats abordés et expériences partagées avec eux, scientifiques ou non d'ailleurs, ont été une occasion de se cultiver toujours un peu plus.
+Je remercie également l'ensemble des doctorants de l'équipe MC2\footnote{Modelling, Control and Computations}, récemment divisée en deux nouvelles équipes (MEMPHIS\footnote{Modeling Enablers for Multi-PHysics and InteractionS} et MONC\footnote{Modélisation Mathématique pour l'ONCologie}), qui au fil du temps sont devenus bien plus que de simples collègues, en particulier Hervé Ung, Alexia de Brauer, Thomas Michel, Etienne Baratchart et Alice Raeli. Les divers débats abordés et expériences partagées avec eux, scientifiques ou non d'ailleurs, ont été une occasion de se cultiver toujours un peu plus.
 
 \paragraph{}
 Je remercie également l'ensemble des bonnes volontés qui ont consacré de leur temps pour relire tout ou partie de mon manuscrit, et d'en avoir décelé les fautes et coquilles en tout genre. 
@@ -49,13 +49,14 @@ Merci de ta patience et de ta compréhension face à mes journées de travail qu
 \vspace*{5mm}
 \section*{\large Financements / Funding}
 Ces travaux ont été financés par l'Université de Bordeaux. 
-Merci également à l'INRIA et au CNRS d'avoir financée plusieurs missions en France et à l'étranger.
+Je remercie aussi l'IMB (Institut Mathématiques de Bordeaux) de m'avoir accueilli dans ses locaux durant ces 3 ans. 
+Merci également à l'INRIA et au CNRS d'avoir financé plusieurs missions en France et à l'étranger.
 
 
 \paragraph{}
 This study was supported by a public grant from the French National Research
 Agency within the context of the Investments for the Future Program, referenced ANR-10-LABX-57 and named TRAIL
-and with the financial support from the French State, managed by the French National Research Agency (ANR) in the frame of the "Investments for the future" Programme IdEx Bordeaux - CPU (ANR-10-IDEX-03-02).
+and with the financial support from the French State, managed by the French National Research Agency (ANR) in the frame of the ``Investments for the future'' Programme IdEx Bordeaux - CPU (ANR-10-IDEX-03-02).
 
 
 \paragraph{}
@@ -63,3 +64,5 @@ Experiments presented in this paper were carried out using the PlaFRIM experimen
 being developed under the Inria DIHPES development action with support from LABRI and
 IMB and other entities: Conseil Régional d’Aquitaine, FeDER, Université de Bordeaux and
 CNRS (see \url{https://plafrim.bordeaux.inria.fr/})
+
+\vspace{15mm}
