--- a/manuscrit_G_LEFEBVRE/resume.tex
+++ b/manuscrit_G_LEFEBVRE/resume.tex
@@ -17,13 +17,15 @@ Enfin un critère robuste permettant de quantifier l'\hetero à la fois des imag
 \myhrule
 \vfill
 
+\selectlanguage{english}
 \subsection*{\titreen}
 \vfill
-\paragraph{Abstract~:} This thesis deals with tumor heterogeneity analysis and modeling during treatments resistances. 
-A patient-dependent PDEs model, that takes into account two kinds of treatments, is presented. It qualitatively and quantitatively reproduces the different stage during the tumor growth undergoing treatments. In order to overcome a numerical instability linked to the type of modeling, a new numerical scheme is built~: the \twinweno. 
+\paragraph{Abstract:} This thesis deals with tumor heterogeneity analysis and modeling during treatments resistances. 
+A patient-dependent PDEs model, that takes into account two kinds of treatments, is presented. It qualitatively and quantitatively reproduces the different stage during the tumor growth undergoing treatments. In order to overcome a numerical instability linked to the type of modeling, a new numerical scheme is built: the \twinweno. 
 Then, an image synthesis method is developed to enable a better comparison between the numerical results and the clinical data. 
 Finally, a robust criteria that quantifies the tumor heterogeneity from the clinical data and from the synthesis images, is built. 
 
-\paragraph{Keywords~:} modeling, numerical simulation, cancer, tumor growth, tumor heterogeneity, treatments resistances, PDEs
+\paragraph{Keywords:} modeling, numerical simulation, cancer, tumor growth, tumor heterogeneity, treatments resistances, PDEs
+\selectlanguage{francais}
 
 \end{document}
