correction unite alpha

--- a/manuscrit_G_LEFEBVRE/main.tex
+++ b/manuscrit_G_LEFEBVRE/main.tex
@@ -140,6 +140,11 @@
 \usepackage{xr}
 
 %%%%% Definition des metadonnees du fichier pdf
+%%%% A voir : Norme pdf ?
+%%%%%%%   http://www.mathstat.dal.ca/~selinger/pdfa/
+%%%%%%%   http://www.pdf-tools.com/pdf/validate-pdfa-online.aspx
+%%% \usepackage[a-1b]{pdfx}
+%%% \usepackage{xmpincl}
 \usepackage[pdftex,
             pdfauthor={Guillaume LEFEBVRE},
             pdftitle={Modélisation et analyse de l'hétérogénéité tumorale lors de résistance aux traitements~: cas des métastases hépatiques de GIST},
